flex-wrap, spacebetween, and align items center was used on the last project to get the image correctly

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -123,8 +123,10 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     /* enter needed declarations here */
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
-
 .grey-box {
     background: grey;
     width: 3em;
